# airdrop

./: .gitignore  airdrop.py  config.json  pyproject.toml
